OpenCms Module Developer Eclipse plug-in

Release 0.0.4
- repair compatibility issue introduced in OpenCms 7.0.4

Release 0.0.3 -- released on October 31, 2007
- Show progressbar when communicating with OpenCms
- fixed bug 1767941 that occured on Linux based systems
- fixed bug 1758758 copy to opencms and publish NOT working

Release 0.0.2 -- released on July 2, 2007
- Log exceptions to Eclipse log file
- Make small change to the way the plugin connects to OpenCms. This resolves the 'unresolved compilation error'. 

Release 0.0.1 -- released on June 17, 2007
- New OpenCms Module wizard with import possibility of module from server
- Toggle OpenCms module nature
- Upload module to OpenCms
- Upload and Publish module to OpenCms
- Download module from OpenCms
- Use local OpenCms installation codebase (via Custom ClassLoader)
- Change OpenCms classpath without restarting eclipse
- Maintain preferences

